# Akasec-CTF-2024

./: README.md
DFIR/Portugal/: README.md
DFIR/Sharint is not Caring/: README.md
DFIR/Snooz/: readme.md
DFIR/Sussy/: README.md
DFIR/saveme/: writeup.md
crypto/: README.md
crypto/GCL/: SECRET.py  descreption  solve.py
crypto/Lost/: SECRET.py  descreption  solve.sage
crypto/My_Calculus_Lab/: description.txt
crypto/Power over all/: SECRET.py  description  solve.py
crypto/twin/: SECRET.py  description  solve.sage
forensic/Portugal/: README.md
forensic/Snooz/: writeup.md
forensic/Sussy/: README.md
hardware/Alien_Circuit/: README.md  description.txt  gen.py  solve.py
misc/Flag Checker/: Dockerfile  README.md  chall.c
misc/Matry-Steg-oshka/: README.md
misc/format/: README.md
misc/pyJail/: README.md
misc/so_long/: README.md
pwn/bad_trip_and_the_absolute_horror_of_the_trip/: README.md  exp.py  main.c  makefile  pay.s
pwn/bytecode/: README.md  bytecode  makefile  x.py
pwn/good_trip/: .gdb_history  README.md  exp.py  libc.so.6  main.c  makefile
pwn/warmup/: .gdb_history  Dockerfile  README.md  main.c  makefile  x.py
pwn/yapping/: README.md  docker-compose.yml
pwn/zop/: README.md  x.py  zop
reverse/grip/: README.md
reverse/mips/: Makefile  README.md
reverse/orgalorg/: README.md  passwords.txt
reverse/packeta/: README.md  makefile  packeta
web/Rusty_Road/deploy/rustyroad/: Cargo.toml  Dockerfile
web/Rusty_Road/deploy/rustyroad/src/: main.rs
web/Rusty_Road/deploy/rustyroad/templates/: login.hbs  register.hbs
(+88 files in other folders)
